--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         </div>
     </section>
     <nav class="nav_bottom">
-        <li><a href="#"><i class="fas fa-home active"></i></a></li>
-        <li><a href="#"><i class="fas fa-search"></i></a></li>
+        <li><a href="/index.html"><i class="fas fa-home active"></i></a></li>
+        <li><a href="/search.html"><i class="fas fa-search"></i></a></li>
         <li><a href="#"><i class="fas fa-ticket-alt"></i></a></li>
         <li><a href="#"><i class="fas fa-id-badge"></i></a></li>
     </nav>
